samples/_failures_safe/1761074433_bcff24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cc15955.c: In function ‘main’:
./samples/SAFE/__tmp_9cc15955.c:136:31: error: ‘MAX_’ undeclared (first use in this function)
  136 |             if (entry_count < MAX_
      |                               ^~~~
./samples/SAFE/__tmp_9cc15955.c:136:31: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9cc15955.c:136:35: error: expected ‘)’ at end of input
  136 |             if (entry_count < MAX_
      |                ~                  ^
      |                                   )
./samples/SAFE/__tmp_9cc15955.c:136:13: error: expected declaration or statement at end of input
  136 |             if (entry_count < MAX_
      |             ^~
./samples/SAFE/__tmp_9cc15955.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9cc15955.c:136:13: error: expected declaration or statement at end of input
